--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "homepage":     "https://github.com/jouz/node-xbee-svd",
     "dependencies": {
       "serialport" : "0.7.x"
+      "async" : "0.1.x"
     }
     "repository": {
       "type" : "git",
