--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{   "name" :        "xbee-svd",
-    "version" :     "0.0.4",
+{   "name" :        "svd-xbee",
+    "version" :     "0.0.5",
     "description" : "A more high level fork of Richard Morrison's node-xbee",
     "author":       "Jan Kolkmeier <jankolkmeier@gmail.com>",
     "main":         "xbee.js",
