--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {   "name" :        "svd-xbee",
-    "version" :     "0.0.9",
+    "version" :     "0.1.0",
     "description" : "A more high level fork of Richard Morrison's node-xbee",
     "author":       "Jan Kolkmeier <jankolkmeier@gmail.com>",
     "maintainers":  "Jan Kolkmeier <jankolkmeier@gmail.com>",
@@ -12,7 +12,8 @@
     "keywords":     [ "xbee", "serialport", "robots", "sensors", "automation", "control" ],
     "homepage":     "https://github.com/jouz/node-xbee-svd",
     "dependencies": {
-      "serialport2" : "0.0.x"
+      "serialport2" : "0.0.x",
+      "async" : "0.1.x"
     },
     "repository": {
       "type" : "git",
